# gabbler-application/src/main/java/fr/hesias/gabblerapi/application/api/mapper/SubscriptionApiMapper.java
@@ -4,7 +4,7 @@ import fr.hesias.gabblerapi.desc.api.server.model.UserSubscription;
 import fr.hesias.gabblerapi.domain.model.DomainSubscription;
 import fr.hesias.gabblerapi.domain.result.DomainSubscriptionResult;
 
-import java.time.LocalDateTime;
+import static fr.hesias.gabblerapi.domain.model.DomainAccessStatus.OK;
 
 public class SubscriptionApiMapper
 {
@@ -14,23 +14,22 @@ public class SubscriptionApiMapper
 
         var domainSubscription = domainSubscriptionResult.getDomainSubscription();
         UserSubscription userSubscription = new UserSubscription();
-        userSubscription.setUserUuid(domainSubscription.getUserUuid());
         userSubscription.setSubscriptionOfferId(domainSubscription.getSubscriptionOfferId());
         userSubscription.setEndDate(domainSubscription.getEndDate().toString());
         userSubscription.setStartDate(domainSubscription.getStartDate().toString());
         return userSubscription;
     }
 
-    public DomainSubscription toSubscriptionToDomainSubscription(UserSubscription userSubscription)
+    public DomainSubscriptionResult toSubscriptionToDomainSubscription(String userUuid,
+                                                                       int offerId)
     {
 
-        return new DomainSubscription(
-                LocalDateTime.parse(userSubscription.getStartDate()),
-                LocalDateTime.parse(userSubscription.getEndDate()),
-                userSubscription.getUserUuid(),
-                userSubscription.getSubscriptionOfferId()
+        var domainSubcription = new DomainSubscription(
+                userUuid,
+                offerId
         );
 
+        return new DomainSubscriptionResult(OK, domainSubcription);
     }
 
 
